--- a/package.json
+++ b/package.json
@@ -42,38 +42,39 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "bip39": "^3.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
+    "helmet": "^7.1.0",
+    "joi": "^17.13.3",
     "pg": "^8.12.0",
     "redis": "^4.6.15",
-    "winston": "^3.13.0",
-    "joi": "^17.13.3",
+    "snarkjs": "^0.7.4",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "bip39": "^3.1.0",
-    "dotenv": "^16.4.5",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.3.1",
-    "snarkjs": "^0.7.4"
+    "winston": "^3.13.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.0",
-    "@types/express": "^4.17.21",
-    "@types/pg": "^8.11.6",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.0",
+    "@types/pg": "^8.11.6",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.57.0",
-    "prettier": "^3.3.2",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "snyk": "^1.1292.2",
     "ts-jest": "^29.1.5",
     "tsx": "^4.15.6",
-    "typescript": "^5.4.5",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "snyk": "^1.1292.2"
+    "typescript": "^5.4.5"
   },
   "lint-staged": {
     "*.ts": [
@@ -82,4 +83,3 @@
     ]
   }
 }
-
